Bug 1864148 - Make HTMLMediaElement only trap touch events when the ControlBar or the PlayButton or the ClickToPlay button is the target r=emilio,dom-core,smaug

Bug 1327097 introduced the original change to trap all these events,
to prevent content from handling them. However, looking at Chromium
code https://source.chromium.org/search?q=::KeepEventInNode&ss=chromium%2Fchromium%2Fsrc,
this should only happen when certain elements are the targets, not
anywhere on the media element.

This patch fixes this by allowing touch events to propagate, and only
trap them when the ControlBar or the ClickToPlay button is the target.

Differential Revision: https://phabricator.services.mozilla.com/D226540